--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="sign_up">Sign Up</string>
     <string name="create_event">Create Event</string>
     <string name="view_invitations">View Invitations</string>
+    <string name="contact">Contact</string>
+    <string name="edit_profile">Edit Profile</string>
 </resources>
