--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="start_date">Start Date</string>
     <string name="end_date">End Date</string>
     <string name="profile">Profile</string>
+    <string name="change_password">Change Password</string>
     event_location
 </resources>
